--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "jest --watchAll --verbose"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,8 @@
     "firebase-admin": "^12.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
