--- a/server/package.json
+++ b/server/package.json
@@ -5,19 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jest --watchAll --verbose"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=5000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.4",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.2"
+    "mongoose": "^8.1.2",
+    "supertest": "^6.3.4"
   },
   "devDependencies": {
     "jest": "^29.7.0"
